0.0--setup-istio/istio-ingressgateway/bookinfo-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookinfo
  namespace: istio-system
spec:
  hosts:
  - "localhost-bookinfo.example.com"
  gateways:
  - istio-system/istio-gateway
  http:
  - route:
    - destination:
        host: productpage.default.svc.cluster.local
        port:
          number: 9080
