0.0--setup-istio/istio-ingressgateway/debugging-timeout-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookinfo
  namespace: istio-system
spec:
  hosts:
  - "localhost-debugging-timeout.example.com"
  gateways:
  - istio-system/istio-gateway
  http:
  - route:
    - destination:
        host: publicapp.default.svc.cluster.local
        port:
          number: 3000
        subset: v1
    timeout: 60s
