0.0--setup-istio/istio-ingressgateway/jaeger-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jaeger
  namespace: istio-system
spec:
  hosts:
  - "localhost-jaeger.example.com"
  gateways:
  - istio-system/istio-gateway
  http:
  - route:
    - destination:
        host: jaeger-query.istio-system.svc.cluster.local
        port:
          number: 16686
