0.0--setup-istio/istio-ingressgateway/kibana-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kibana
  namespace: istio-system
spec:
  hosts:
  - "localhost-kibana.example.com"
  gateways:
  - istio-system/istio-gateway
  http:
  - route:
    - destination:
        host: kibana.logging.svc.cluster.local
        port:
          number: 5601
